--- a/eda.ipynb
+++ b/eda.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('results_no_pretrained/results.csv')\n",
-    "df2 = pd.read_csv('results_pretrained/results.csv')\n",
+    "df1 = pd.read_csv('no_pretrained/results.csv')\n",
+    "df2 = pd.read_csv('pretrained/results.csv')\n",
     "df1['pretrained'] = False\n",
     "df2['pretrained'] = True\n",
     "param_df1 = pd.read_csv('results_no_pretrained/params.csv')\n",
